# video-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  starter.py
app/config/: env_config.py  log_config.py  qdrant_config.py
app/prompts/: prompts.py
app/routes/: chat.py  router.py  video_ingestion.py  video_upload.py
app/schema/: chat_schema.py  frame_schema.py  indexing_schema.py  node_schema.py  transcript_schema.py  video_schema.py
app/services/: caption_service.py  chat_service.py  clip_embedding.py  embedding_service.py  frame_extraction_service.py  indexing_service.py  llm_service.py  memory_service.py  node_builder_service.py  qdrant_service.py  retrieval_service.py  transcription_service.py  video_download_service.py  video_ingestion_service.py  whisper_service.py  youtube_service.py
app/tests/: test_caption_service.py  test_transcription_service.py  test_video_ingestion.py  test_video_upload.py  test_whisper_service.py  test_youtube_service.py
app/utils/: frame_utils.py  node_utils.py  transcript_utils.py  youtube_validators.py
website/: app.py
website/api/: client.py
website/components/: chat.py  gallery.py  ingestion.py
website/config/: app_config.py
