[project]
name = "video-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "yt-dlp>=2026.3.17",
    "youtube-transcript-api>=0.6.2",
    "openai-whisper>=20231117",
    "llama-index-core>=0.14.22",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "llama-index-embeddings-huggingface>=0.7.0",
    "qdrant-client>=1.18.0",
    "transformers>=5.8.1",
    "torch>=2.12.0",
    "pillow>=10.2.0,<11.0.0",
    "llama-index-llms-gemini>=0.6.2",
    "pydantic-settings>=2.14.1",
    "langchain-google-genai>=4.2.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
